# Nullprt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md
.github/: pull_request_template.md
apps/nprt-studio/: CMakeLists.txt
apps/nprt-studio/plugins/examples/: hello_plugin.nprt
apps/nprt-studio/resources/i18n/: en-US.json  zh-CN.json
apps/nprt-studio/src/: main.cpp
apps/nprt-studio/src/core/: Application.cpp  Application.h
apps/nprt-studio/src/debug/: DapClient.cpp  DapClient.h
apps/nprt-studio/src/editor/: EditorWidget.cpp  EditorWidget.h
apps/nprt-studio/src/extensions/: PluginHost.cpp  PluginHost.h
apps/nprt-studio/src/language/: LspClient.cpp  LspClient.h
apps/nprt-studio/src/storage/: StudioDatabase.cpp  StudioDatabase.h
apps/nprt-studio/src/ui/: MainWindow.cpp  MainWindow.h
apps/nprt-studio/src/workspace/: WorkspaceService.cpp  WorkspaceService.h
docs/: 00-overview.md  10-language.md  20-abi-ffi.md  30-config-format.md  40-toolchain.md  50-runtime-stdlib.md  60-security-release.md  index.html
scripts/: abi_lsp_verify_report.txt  aegc1_selfhost_report.txt  aegc1_selfhost_verify.ps1  bootstrap_verify.ps1  bootstrap_verify_report.txt  build_nprt_studio.ps1  cross_compile_report.txt  cross_compile_test.ps1  detect_toolchain.ps1  generate_api_docs.ps1  lsp_replay_requests.jsonl  selfhost_readiness_report.ps1  selfhost_readiness_report.txt  verify_abi_lsp.ps1  verify_community_ecosystem_full_completion.ps1  verify_compiler_full_completion.ps1  verify_debugger_full_completion.ps1  verify_doc_full_completion.ps1  (+10 more)
(+261 files in other folders)
